--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         function f2() {
             console.log("feature 1");
+            console.log("add to feature 1");
         }
 
         f1();
